--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 title: Amagnolo GitHub pages
 description: [A short description of your site's purpose]
