--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ plugins:
 - jekyll-remote-theme
 
 title: Amagnolo GitHub pages
-description: [A short description of your site's purpose]
-#show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
+description: Short description of this site's purpose
+show_downloads: true
